tests/paczka1/small_fuzzy/67467019.err
Error in line 1: ZIM6B A317 92,6
Error in line 6: ZIM6B S567 -1,0
Error in line 4: ZIM6B S567 50,3
Error in line 11: LYw8 S567 120,5
